# svc-extensions-router

./: Dockerfile  pyproject.toml
app/: main.py
