[project]
name = "svc-extensions-router"
version = "0.1.0"
description = "Router for SDK Extensions (byok) requests"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
]


[[tool.uv.index]]
name = "gcp"
url = "https://us-central1-python.pkg.dev/strangeworks-apps/apps-pypi/simple/"

